<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/size_30dp"
    android:elevation="@dimen/size_10dp"
    app:cardCornerRadius="@dimen/size_30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_check_box_outline_blank_24"
            android:padding="@dimen/size_15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_15dp"
            android:hint="@string/create_todo_enter"
            android:id="@+id/ettodo"/>
    </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/size_15dp"
            >
            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".10"
                android:id="@+id/guide_v_10"/>
            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".10"
                android:id="@+id/guide_h_10"/>
            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".40"
                android:id="@+id/guide_v_40"/>
            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".7"
                android:id="@+id/guide_v_70"/>
            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".9"
                android:id="@+id/guide_v_90"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guide_h_10"
                app:layout_constraintEnd_toEndOf="@id/guide_v_40"
                app:layout_constraintTop_toTopOf="@id/guide_h_10"
                android:backgroundTint="#808080"
                android:id="@+id/btnsetdata"
                android:text="@string/setReminder"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                app:layout_constraintTop_toTopOf="@id/guide_h_10"
                app:layout_constraintStart_toStartOf="@id/guide_v_70"
                android:onClick="onClick"
                android:clickable="true"
                android:id="@+id/tvdone"
                app:layout_constraintEnd_toEndOf="@id/guide_v_90"
                android:textStyle="bold"
                android:textSize="@dimen/size_20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>