<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <data>
                <variable
                    name="mainFragment"
                    type="com.shruti.notealways.MainFragment"/>
                <variable
                    name="show"
                    type="Boolean" />
        </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".07"
            android:orientation="horizontal"
            android:id="@+id/guide_h_6"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".30"
            android:orientation="horizontal"
            android:id="@+id/guide_h_30"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent=".25"
            android:orientation="horizontal"
            android:id="@+id/guide_h_25"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent=".88"
            android:orientation="horizontal"
            android:id="@+id/guide_h_90"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent=".43"
            android:orientation="vertical"
            android:id="@+id/guide_v_43"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent=".58"
            android:orientation="vertical"
            android:id="@+id/guide_v_58"/>
        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guide_h_6"
            android:layout_margin="@dimen/size_5dp"
            android:iconifiedByDefault="false"
            android:padding="@dimen/size_5dp"
            android:queryHint="@string/search"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/guide_h_6"
            app:layout_constraintBottom_toBottomOf="@id/guide_h_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:rowCount="1"
            android:columnCount="3">
                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="@dimen/size_5dp"
                    android:elevation="@dimen/size_10dp"
                    app:cardCornerRadius="@dimen/size_5dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:id="@+id/btnbookmark"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                                <ImageView
                                    android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="@dimen/size_15dp"
                                    android:src="@drawable/icon_bookmarks"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="35dp"
                                    android:gravity="center"
                                    android:textSize="@dimen/size_15dp"
                                    android:text="@string/bookmark"
                                    android:textStyle="bold"/>
                        </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="@dimen/size_5dp"
                    android:elevation="@dimen/size_10dp"
                    app:cardCornerRadius="@dimen/size_5dp"
                    android:id="@+id/btntodo"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/todoList"
                            android:orientation="vertical">
                                <ImageView
                                    android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="@dimen/size_15dp"
                                    android:src="@drawable/icon_checklist"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="35dp"

                                    android:gravity="center"
                                    android:textSize="@dimen/size_15dp"
                                    android:text="@string/todolist"
                                    android:textStyle="bold"/>
                        </LinearLayout>
                </androidx.cardview.widget.CardView>
        </GridLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/guide_h_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingTop="@dimen/size_5dp"
            android:id="@+id/recylerlist"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->mainFragment.fabButton()}"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintEnd_toEndOf="@id/guide_v_58"
            app:layout_constraintStart_toStartOf="@id/guide_v_43"
            app:layout_constraintTop_toBottomOf="@id/guide_h_90" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>